# toolforge

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASE_NOTES-v1.0.0.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: publish.yml  sdlc-tests.yml
.omo/run-continuation/: ses_0e66563baffeFM9sFvo8pcCSNl.json
.opencode/manifests/: sdlc-workflows.json
.serena/: project.yml
_private/: vn-stock-quest-fetch-db.md
docs/: 2026-06-30-podcast-platform-ecosystem-design.md  andy-toolforge-mcp-spec.md  architecture.md  content-operations-package-design.md  development.md  domain-development-plan.md  mcp-server-implementation-plan.md  mcp-skills-design.md  migration-guide.md  phase-2-summary.md  phase-3-summary.md  phase-4-summary.md  phase-5-summary.md  publishing.md  sdlc-agent-flows-design.md  toolforge-improve-request.md  toolforge-skills-request.md  toolforge-tts-enhancement-request.md
docs/superpowers/plans/: 2026-07-02-content-research-implementation.md  (+13 more)
plans/: 2026-07-16-llm-provider-adapter.md
py-packages/vn-stock-indicators/: README.md  pyproject.toml
py-packages/vn-stock-indicators/src/vn_stock_indicators/: __init__.py  batch.py  momentum.py  price_action.py  trend.py  types.py  volatility.py  volume.py
py-packages/vn-stock-indicators/src/vn_stock_indicators.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
py-packages/vn-stock-indicators/tests/: test_batch.py  test_momentum.py  test_price_action.py  test_trend.py  test_volatility.py  test_volume.py
scripts/: verify-links.sh
(+10 files in other folders)
